--- a/frontend/public/assets/scss/component/_user-profile.scss
+++ b/frontend/public/assets/scss/component/_user-profile.scss
@@ -70,6 +70,43 @@
     }
   }
 }
+.imageSelectContainer {
+  display: grid;
+  align-items: center;
+  gap: 1rem;
+}
+
+.fileInput {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.imagePreview {
+  width: 270px;
+  height: 150px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+.imagePreviewProfile {
+  width: 150px;
+  height: 210px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 
 .student-profile-content {
   padding: 25px 0px 30px 14px;
