Revert "removed verification and fix build error"
This reverts commit 262ce08cf9a4c1b2e660396d3457d05fd41a7ef4.

--- a/frontend/public/assets/scss/component/_user-profile.scss
+++ b/frontend/public/assets/scss/component/_user-profile.scss
@@ -35,6 +35,29 @@
   margin-bottom: 0px;
 }
 
+.flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+}
+
+.verify-btn {
+  background-color: #1D2951;
+  color: white;
+  padding: 0.5rem;
+  display: flex;
+  border-radius: 5px;
+}
+
+.verified{
+  color: green;
+}
+.not-verified{
+  color: red;
+}
+
 .student-profile-sidebar {
   background-color: var(--clr-bg-footer);
   padding: 30px;
